--- a/package.json
+++ b/package.json
@@ -24,11 +24,6 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "morgan": "^1.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-script": "^2.0.5",
-    "react-scripts": "^5.0.1"
+    "morgan": "^1.10.0"
   }
 }
