--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": "^16.14"
   }
 
 }
